--- a/dataeval-app/src/app/app.component.html
+++ b/dataeval-app/src/app/app.component.html
@@ -7,7 +7,7 @@
             close
         </mat-icon>
     </button>
-    Data Evaluation 
+    Data Evaluation  -Test
 </mat-toolbar>
 
 <mat-sidenav-container>
